Migrate velocity to speed column
