# app/controllers/map/leaflet_controller.rb
@@ -26,7 +26,7 @@ class Map::LeafletController < ApplicationController
   end
 
   def build_coordinates
-    @points.pluck(:lonlat, :battery, :altitude, :timestamp, :velocity, :id, :country_name, :track_id)
+    @points.pluck(:lonlat, :battery, :altitude, :timestamp, :speed, :id, :country_name, :track_id)
            .map { |lonlat, *rest| [lonlat.y, lonlat.x, *rest.map(&:to_s)] }
   end
 
