# app/serializers/api/slim_point_serializer.rb
@@ -11,7 +11,7 @@ class Api::SlimPointSerializer
       latitude:     point.lat.to_s,
       longitude:    point.lon.to_s,
       timestamp:    point.timestamp,
-      velocity:     point.velocity,
+      speed:        point.speed,
       country_name: point.country_name
     }
   end
