# app/serializers/exports/point_gpx_serializer.rb
@@ -56,9 +56,7 @@ class Exports::PointGpxSerializer
     io.write("      <trkpt lat=\"#{point.lat}\" lon=\"#{point.lon}\">\n")
     io.write("        <ele>#{point.altitude.to_f}</ele>\n")
 
-    if point.velocity.present? && point.velocity.to_f.positive?
-      io.write("        <speed>#{point.velocity.to_f}</speed>\n")
-    end
+    io.write("        <speed>#{point.speed}</speed>\n") if point.speed.present? && point.speed.positive?
 
     io.write("        <time>#{point.recorded_at.xmlschema}</time>\n")
 
